# rust-api

./: Cargo.toml  LICENSE  README.md
.github/workflows/: rust.yml
src/: bayes.rs  examples.rs  main.rs
