[package]
name = "rocket-api"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = { version = "0.5.0-rc.1", default-features = false, features = ["json"] }
serde = "1.0"
serde_json = "1.0.68"
serde_derive = "1.0.130"
openssl = "0.10.36"
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1", features = ["full"] }